# Deploying-a-Scalable-ML-Pipeline-with-FastAPI

./: .flake8  .gitignore  MODEL_CARD.md  README.md  local_api.py  main.py  pyproject.toml  requirements.txt  slice_output.txt  test_ml.py  train_model.py
.github/workflows/: ci.yml  python-ci.yml
ml/: __init__.py  data.py  model.py
scripts/: __init__.py  generate_slices.py  train_tiny_model.py
tests/: test_api.py
