[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deployable-ml-pipeline"
version = "0.0.0"
description = "Small example: Deploying a Scalable ML Pipeline with FastAPI"
readme = "README.md"
authors = [
  { name = "yannickn", email = "yannick@example.com" }
]
license = { text = "MIT" }
dependencies = [
  "fastapi==0.112.0",
  "uvicorn==0.30.5",
  "pandas==2.2.2",
  "scikit-learn==1.5.1",
  "joblib==1.4.2",
  "httpx==0.26.0",
  "pytest==8.3.2",
  "flake8==7.1.1",
  "requests==2.32.3",
]

[project.urls]
"Repository" = "https://github.com/yannicknkongolo7-crypto/Deploying-a-Scalable-ML-Pipeline-with-FastAPI"

[tool.setuptools.packages.find]
include = ["ml"]
